--- a/from-to-education/src/app/pages/administration/admin-page/admin-test/admin-test.component.css
+++ b/from-to-education/src/app/pages/administration/admin-page/admin-test/admin-test.component.css
@@ -1,14 +1,29 @@
 .flex{
   width: 96%;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   flex-wrap: wrap;
   justify-content: flex-start;
-  margin-left: 4%;
+  margin-left: 2%;
 }
 :root{
   --btn: 20px;
 }
+.container {
+  margin-left: 4%;
+  align-items: center;
+  justify-content: flex-start;
+  display: flex;
+  flex-direction: row;
+}
+.containerbtn {
+  margin-left: 1%;
+  align-items: center;
+  justify-content: flex-start;
+  display: flex;
+  flex-direction: row;
+}
+
 #request{
   position: fixed;
   z-index: 2;
@@ -56,19 +71,18 @@
   }
 }
 
-.item:hover{
-  transform:scale(1.025,1.025);
-  -webkit-transform:scale(1.025,1.025);
-  -moz-transform:scale(1.025,1.025);
-  cursor: pointer;
-}
+/*.item:hover{*/
+/*  transform:scale(1.025,1.025);*/
+/*  -webkit-transform:scale(1.025,1.025);*/
+/*  -moz-transform:scale(1.025,1.025);*/
+/*  cursor: pointer;*/
+/*}*/
 
 .item{
   margin: 2%;
   /*margin: auto;*/
-  background: linear-gradient(to bottom right, #146525, #2ba7d2);
+  /*background: linear-gradient(to bottom right, #146525, #2ba7d2);*/
   width: 44%;
-  height: 108px;
 }
 
 .active{
@@ -88,21 +102,20 @@
   justify-content: flex-start;
   align-items: flex-end;
   text-align: left;
-  color: white;
+  color: black;
   margin: 2%;
 }
 
 .about{
-  float: right;
-  width: 34%;
+  width: 80%;
   font-size: 17px;
   line-height: 20px;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  align-items: flex-end;
+  align-items: flex-start;
   text-align: right;
-  color: white;
+  color: black;
   margin-right: 2%;
   margin-top: auto;
   /*margin-top: 5%;*/
