--- a/from-to-education/src/app/app.component.html
+++ b/from-to-education/src/app/app.component.html
@@ -4,8 +4,9 @@
       <div>
       </div>
       <button mat-button routerLink="/show" style="cursor:pointer;" class="example-app-name icon-ot">
-        <img
-          src="../assets/left_big.png" width="150px">
+        click
+<!--        <img-->
+<!--          src="../assets/left_big.png" width="150px">-->
       </button>
       <span class="example-spacer"></span>
       <div id="flex">
