--- a/from-to-education/src/app/pages/administration/admin-page/admin-test/admin-test.component.css
+++ b/from-to-education/src/app/pages/administration/admin-page/admin-test/admin-test.component.css
@@ -16,6 +16,10 @@
   display: flex;
   flex-direction: row;
 }
+.green-btn-card{
+  background:  #146525; color: white; margin:0 10px
+}
+
 .containerbtn {
   margin-left: 1%;
   align-items: center;
@@ -79,7 +83,7 @@
 /*}*/
 
 .item{
-  margin: 2%;
+  margin: 1%;
   /*margin: auto;*/
   /*background: linear-gradient(to bottom right, #146525, #2ba7d2);*/
   width: 44%;
