--- a/from-to-education/src/app/pages/administration/admin-page/dialogs/add-new-section/add-new-section.component.html
+++ b/from-to-education/src/app/pages/administration/admin-page/dialogs/add-new-section/add-new-section.component.html
@@ -1,5 +1,10 @@
-<form style="text-align: center;" [formGroup]="form">Добавление раздела
-  <div >
+<form style="text-align: center;" [formGroup]="form">
+  <ng-template [ngIf]="data.sec == 'section'" [ngIfElse]="course">
+    Добавление раздела
+  </ng-template>
+  <ng-template #course>
+    Добавление направления
+  </ng-template>
     <mat-error *ngIf="err"> {{errText}}</mat-error>
       <div class="mr-1">
         <mat-form-field class="example-full-width mt-1">
@@ -11,9 +16,9 @@
           <input matInput formControlName="description">
         </mat-form-field>
       </div>
-  </div>
   <div >
     <button mat-button (click)="onNoClick()">Отмена</button>
-    <button mat-button [disabled]="form.invalid" (click)="addSec()" >Добавить</button>
+    <button mat-button *ngIf="data.sec == 'section'" [disabled]="form.invalid" (click)="addSec()" >Добавить</button>
+    <button mat-button *ngIf="data.sec == 'courses'" [disabled]="form.invalid" (click)="addRoute()" >Добавить</button>
   </div>
 </form>
