--- a/from-to-education/src/app/pages/administration/admin-page/dialogs/edit-section/edit-section.component.html
+++ b/from-to-education/src/app/pages/administration/admin-page/dialogs/edit-section/edit-section.component.html
@@ -1,4 +1,10 @@
-<form style="text-align: center;" [formGroup]="form">Редактирование раздела
+<form style="text-align: center;" [formGroup]="form">
+  <ng-template [ngIf]="data.sec == 'section'" [ngIfElse]="course">
+    Редактирование раздела
+  </ng-template>
+  <ng-template #course>
+    Редактирование направления
+  </ng-template>
   <div >
     <mat-error *ngIf="err"> {{errText}}</mat-error>
     <div class="mr-1">
@@ -14,6 +20,7 @@
   </div>
   <div >
     <button mat-button (click)="onNoClick()">Отмена</button>
-    <button mat-button [disabled]="form.invalid" (click)="editSec()" >Редактировать</button>
+    <button *ngIf="data.sec == 'section'" mat-button [disabled]="form.invalid" (click)="editSec()" >Сохранить</button>
+    <button *ngIf="data.sec == 'courses'" mat-button [disabled]="form.invalid" (click)="editCourse()" >Сохранить</button>
   </div>
 </form>
