--- a/from-to-education/src/app/pages/show-page/show-page.component.css
+++ b/from-to-education/src/app/pages/show-page/show-page.component.css
@@ -6,6 +6,14 @@
   justify-content: flex-start;
   margin-left: 4%;
 }
+.flex-program{
+  width: 96%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  margin-left: 4%;
+}
 :root{
   --btn: 20px;
 }
@@ -65,8 +73,13 @@
 
 .item{
   margin: 2%;
-  /*margin: auto;*/
-  /*background: linear-gradient(to bottom right, #6f6fd0, pink);*/
+  background: linear-gradient(to bottom right, #146525, #2ba7d2);
+  width: 44%;
+  height: 172px;
+}
+
+.item-program{
+  margin: 2%;
   background: linear-gradient(to bottom right, #146525, #2ba7d2);
   width: 44%;
   height: 172px;
