поправилены страницы админа, добавлена покупка

--- a/from-to-education/src/app/app.component.html
+++ b/from-to-education/src/app/app.component.html
@@ -4,9 +4,7 @@
       <div>
       </div>
       <button mat-button routerLink="/show" style="cursor:pointer;" class="example-app-name icon-ot">
-        click
-<!--        <img-->
-<!--          src="../assets/left_big.png" width="150px">-->
+        HOME
       </button>
       <span class="example-spacer"></span>
       <div id="flex">
