--- a/from-to-education/src/app/pages/show-page/show-page.component.html
+++ b/from-to-education/src/app/pages/show-page/show-page.component.html
@@ -10,19 +10,19 @@
     <div class="divider"  *ngIf="choice == 'program' || choice == 'courses' || choice == 'currentProgram' "
          style="text-align: center;">
     <mat-icon class="centered">keyboard_arrow_right</mat-icon></div>
-    <li [ngClass]="{'active': choice == 'courses', 'disable':choice != 'route'}"
-        *ngIf="choice == 'courses' || choice == 'route' || choice == 'currentProgram' "
+    <li [ngClass]="{'active': choice == 'courses', 'disable':choice != 'courses'}"
+        *ngIf="choice == 'program' || choice == 'courses' || choice == 'currentProgram' "
         (click)="loadCourses(this.currentSec)">
       <a  style="color: white;" class="title-razdel">{{this.currentSec.name}}</a>
-<!--      <a>{{this.currentSec.name}}</a>-->
     </li>
     <span class="divider" *ngIf="choice == 'program' || choice == 'currentProgram' " style="text-align: center;">
     <mat-icon class="centered">keyboard_arrow_right</mat-icon>
+
   </span>
     <li [ngClass]="{'active': choice == 'program', 'disable':choice != 'program'}"
         *ngIf="choice == 'program'|| choice == 'currentProgram'" (click)="clickProgram()"  style="color: white;"
         class="title-razdel">
-      Программы обучения</li>
+      {{this.currentCourse.name}}</li>
     <mat-icon class="centered" *ngIf="choice == 'currentProgram' ">keyboard_arrow_right</mat-icon>
     <li [ngClass]="{'active': choice == 'currentProgram', 'disable':choice != 'currentProgram'}"
         *ngIf="choice == 'currentProgram' "  style="color: white;" class="title-razdel">
@@ -63,8 +63,12 @@
       <div>Стоимость {{item.price}} рублей</div>
     </div>
     <div class="about">
-      <button mat-raised-button style="background:  #c9c9f7; color: white; margin:0 10px" (click)="buy(item)">
+      <button *ngIf="item.contractId === null || item.contractId === undefined" mat-raised-button style="background:  #c9c9f7; color: white; margin:0 10px" (click)="buy(item)">
         Купить
+      </button>
+
+      <button *ngIf="item.contractId !== null && item.contractId !== undefined" mat-raised-button style="background:  #c9c9f7; color: white; margin:0 10px">
+        Куплено
       </button>
     </div>
   </div>
