--- a/from-to-education/src/app/pages/administration/admin-page/add-literature/add-literature.component.html
+++ b/from-to-education/src/app/pages/administration/admin-page/add-literature/add-literature.component.html
@@ -1,17 +1,31 @@
-
+<div class="page-container">
 <h2 class="mt-3 mb-3">
   <button mat-icon-button id="exit" routerLink="/education"><mat-icon>keyboard_backspace</mat-icon></button>
   Список литературы</h2>
 
-<div class="p-1 bg-light rounded rounded-pill shadow-sm mb-2 me-3 mt-2 ms-2" style="width: 20%">
-  <div class="input-group">
-    <input type="search" placeholder="Поиск.." aria-describedby="button-addon1" class="form-control border-0 bg-light"
-           [(ngModel)]="textSearch" (change)="search()"/>
-    <div class="input-group-append">
-      <button id="button-addon1" type="submit" class="btn btn-link text-primary" (click)="search()">Поиск</button>
+  <div class="d-flex flex-row justify-content-between">
+    <div>
+      <div class="mt-3">
+        <button mat-raised-button style="background:  #146525; color: white" class=" mr-2 mt-2" (click)="addLiter()">
+          Добавить литературу
+        </button>
+      </div>
+    </div>
+
+    <div class="p-1 bg-light rounded rounded-pill shadow-sm mb-2 me-3 mt-2" style="width: 20%">
+      <div class="input-group">
+        <input type="search" placeholder="Поиск.." aria-describedby="button-addon1" class="form-control border-0 bg-light"
+               [(ngModel)]="textSearch" (change)="search()"/>
+        <div class="input-group-append">
+          <button id="button-addon1" type="submit" class="btn btn-link text-primary" (click)="search()">Поиск</button>
+        </div>
+      </div>
     </div>
   </div>
-</div>
+
+
+
+
 
 <mat-card class="mt-3 mb-3 panel" *ngFor="let lit of literatures">
   <mat-card-title>{{lit.title}}</mat-card-title>
@@ -34,10 +48,6 @@
       <mat-icon>file_download</mat-icon>
     </button>
   </div>
-  <div *ngIf="lit.status" id="visor-video">
-    <iframe *ngIf="lit.youtube_link" width="600" height="300" style=" margin-left: auto;display: block;margin-right: auto;"
-            allowfullscreen
-            [src]=sanitizer.bypassSecurityTrustResourceUrl(lit.youtube_link)>
-    </iframe>
-    </div>
+
 </mat-card>
+</div>
