--- a/from-to-education/src/app/pages/administration/admin-page/statistics/statistics.component.html
+++ b/from-to-education/src/app/pages/administration/admin-page/statistics/statistics.component.html
@@ -19,7 +19,14 @@
     class="ag-theme-alpine"
     [rowData]="rowData"
     [columnDefs]="columnDefs"
+    [pagination]="true"
     [rowClassRules]="rowClassRules">
   </ag-grid-angular>
+
+  <div class="journal-info-container  mb-2">
+    <button mat-raised-button color="primary" [disabled]="page <= 1" (click)="previousPage()" > << </button>
+    <span class="page-info">Страница {{page}} из {{pageCount}}</span>
+    <button mat-raised-button color="primary" [disabled]="page>= pageCount" (click)="nextPage()" > >></button>
+  </div>
 </div>
 </form>
