--- a/from-to-education/src/app/pages/administration/admin-page/add-literature/add-literature.component.html
+++ b/from-to-education/src/app/pages/administration/admin-page/add-literature/add-literature.component.html
@@ -3,7 +3,7 @@
   <div class="d-flex flex-row justify-content-between">
     <div>
       <div class="mt-3">
-        <button mat-raised-button style="background:  #146525; color: white" class=" mr-2 mt-2" (click)="addLiter()">
+        <button mat-raised-button class="btn-green mr-2 mt-2" (click)="addLiter()">
           Добавить литературу
         </button>
       </div>
@@ -20,10 +20,6 @@
     </div>
   </div>
 
-
-
-
-
 <mat-card class="mt-3 mb-3 panel" *ngFor="let lit of literatures">
   <mat-card-title>{{lit.title}}</mat-card-title>
   <mat-card-subtitle>
@@ -36,15 +32,6 @@
      [ngClass]="'info-block-click'">
     {{lit.description}}</p>
 
-  <div *ngIf="lit.document_url">
-    <button mat-button
-            style="padding: 0;"
-            class="example-margin login"
-            (click)="fileDownload(lit.document_url)"  title="Скачать">
-      Скачать документ
-      <mat-icon>file_download</mat-icon>
-    </button>
-  </div>
 
 </mat-card>
 </div>
