--- a/from-to-education/src/app/pages/administration/admin-page/question/question.component.html
+++ b/from-to-education/src/app/pages/administration/admin-page/question/question.component.html
@@ -1,7 +1,7 @@
 <div class="page-container">
 
   <div class="mt-3">
-    <button mat-raised-button style="background:  #146525; color: white" class=" mr-2 mt-2" (click)="newQuestion()">
+    <button mat-raised-button class="btn-green mr-2 mt-2" (click)="newQuestion()">
       Новый вопрос
     </button>
   </div>
@@ -10,7 +10,7 @@
     <mat-card class=" mt-3"  style="width: 98%" *ngFor="let question of questions;">
       <div class="title">{{question.questionText}}</div>
       <div class="containerbtn mt-3">
-        <button mat-raised-button style="background:  #146525; color: white" (click)="detail(question)">
+        <button mat-raised-button class="btn-green" (click)="detail(question)">
           Подробнее
         </button>
         <button mat-raised-button style="background:  #f44336; color: white; margin:0 10px" (click)="delete(question)">
