--- a/from-to-education/src/styles.css
+++ b/from-to-education/src/styles.css
@@ -10,17 +10,15 @@
 html, body {
   height: 100%;
 }
-/*html {*/
-/*  -ms-overflow-style: none;  !* IE 10+ *!*/
-/*  scrollbar-width: none; !* Firefox *!*/
-/*}*/
-/*::-webkit-scrollbar { !* chrome based *!*/
-/*  width: 0px;  !* ширина scrollbar'a *!*/
-/*  background: transparent;  !* опционально *!*/
-/*}*/
+
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .final-test {
   background-color: rgba(76, 175, 80, 0.68) !important;
+}
+
+.btn-green{
+  background:  #146525;
+  color: white
 }
