--- a/from-to-education/src/app/pages/administration/admin-page/add-literature/add-literature.component.html
+++ b/from-to-education/src/app/pages/administration/admin-page/add-literature/add-literature.component.html
@@ -21,7 +21,17 @@
   </div>
 
 <mat-card class="mt-3 mb-3 panel" *ngFor="let lit of literatures">
-  <mat-card-title>{{lit.title}}</mat-card-title>
+  <div class="d-flex flex-row justify-content-between">
+    <div>
+      <mat-card-title>{{lit.title}}</mat-card-title>
+    </div>
+    <div>
+      <button mat-button (click)="deletelit(lit)">
+        <mat-icon>close</mat-icon>
+      </button>
+    </div>
+  </div>
+
   <mat-card-subtitle>
     <a *ngIf="lit.link !== null" style="cursor: pointer; color: #007bff" (click)="openLink(lit.link)">Посмотреть</a>
   </mat-card-subtitle>
